--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+Faker = "14.2.0"
 flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 
