--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "name" : "HappyTrails",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5555",
+  "proxy": "http://127.0.0.1:5555",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
