--- a/client/package.json
+++ b/client/package.json
@@ -1,121 +1,51 @@
 {
-  
-  "name": "HappyTrails",
-  
+  "name": "happytrails2",
   "version": "0.1.0",
-  
   "private": true,
-  
   "proxy": "http://127.0.0.1:5555",
-  
   "dependencies": {
-  
-    
-  "@testing-library/jest-dom": "^5.12.0",
-  
-    
-  "@testing-library/react": "^11.2.7",
-  
-    
-  "@testing-library/user-event": "^12.8.3",
-  
-    
-  "formik": "^2.4.2",
-  
-    
-  "react": "^17.0.2",
-  
-    
-  "react-dom": "^17.0.2",
-  
-    
-  "react-markdown": "^6.0.2",
-  
-    
-  "react-router-dom": "^6.10.0",
-  
-    
-  "react-scripts": "^5.0.1",
-  
-    
-  "styled-components": "^5.3.0",
-  
-    
-  "web-vitals": "^1.1.2"
-  
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
-  
   "scripts": {
-  
-    
-  "start": "PORT=4000 react-scripts start",
-  
-    
-  "build": "react-scripts build",
-  
-    
-  "test": "react-scripts test",
-  
-    
-  "eject": "react-scripts eject"
-  
+    "start": "PORT=4000 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
-  
-    
-  "extends": [
-  
-    
-    
-  "react-app",
-  
-    
-    
-  "react-app/jest"
-  
-    
-  ]
-  
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  
   "browserslist": {
-  
-    
-  "production": [
-  
-    
-    
-  ">0.2%",
-  
-    
-    
-  "not dead",
-  
-    
-    
-  "not op_mini all"
-  
-    
-  ],
-  
-    
-  "development": [
-  
-    
-    
-  "last 1 chrome version",
-  
-    
-    
-  "last 1 firefox version",
-  
-    
-    
-  "last 1 safari version"
-  
-    
-  ]
-  
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
